==================== 2.26.0 ====================

2009-03-15  Vincent Untz  <vuntz@gnome.org>

	Mark desktop files as trusted when it makes sense.

	* libpanel-util/panel-keyfile.[ch]: (_panel_key_file_make_executable):
	new, mark a file as executable
	(panel_key_file_to_file): prepend a #! header to the desktop file if
	there's none, and mark the file as executable
	(panel_key_file_copy_and_mark_trusted): new, does what it says :-)
	* menu.c: (add_app_to_desktop): update to use
	panel_key_file_copy_and_mark_trusted() instead of g_file_copy() so that
	the copied file is marked as trusted

2009-03-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio),
	(panel_place_menu_item_append_remote_gio): ignore shadow mounts.

==================== 2.25.92 ====================

2009-02-26  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-error.c: (panel_error_dialog): Use close button
	instead of ok button in error dialogs.

2009-02-24  Vincent Untz  <vuntz@gnome.org>

	Fix some randr-interaction by connecting to the monitors-changed
	signal.
	Fix bug #572933.
	Patch by Matthias Clasen <mclasen@redhat.com>

	* panel-multiscreen.c: (panel_multiscreen_reinit_idle),
	(panel_multiscreen_queue_reinit): use an idle loop as callback since we
	can get two signals emitted at the same time.
	(panel_multiscreen_init): connect to monitors-changed too
	(panel_multiscreen_reinit): trivial update

==================== 2.25.91 ====================

2009-02-16  Vincent Untz  <vuntz@gnome.org>

	* panel-default-setup.entries: remove mixer from the panel layout since
	we don't use an applet by default anymore (it's in the notification
	area now). Distributions still shipping the applet will probably patch
	this back.

==================== 2.25.90 ====================

2009-01-21  Frederic Crozat  <fcrozat@mandriva.com>

	* panel-applet-frame.c:
	* panel.c:
	Fix format security warnings.

2009-01-21  Vincent Untz  <vuntz@gnome.org>
